tests/badly_positioned_spread/badly_positioned_spread.exp
Error ------------------------------------------------------------------------------------------------------ test.js:7:6

Cannot spread `V` because number [1] is incompatible with string [2].

   test.js:7:6
   7|   ...V
           ^

References:
   test.js:3:25
   3| declare var V : { name: number };
                              ^^^^^^ [1]
   test.js:6:10
   6|   name : 'good',
               ^^^^^^ [2]



Found 1 error
